Libraries/Dialog box

--- a/src/scss/_Profile.scss
+++ b/src/scss/_Profile.scss
@@ -2,6 +2,11 @@
   padding: 0.85rem;
 }
 
+.profile-container a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .profile-container__infos {
   display: flex;
   flex-direction: column;
