+ (Login | Signup | AuthHomepage)

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -26,3 +26,7 @@ button {
 @import "./FloatingActions";
 @import "./SelectBoard";
 @import "./CreateBoard";
+@import "./UnAuthHeader";
+@import "./UnAuthFeed";
+@import "./Login";
+@import "./Signup";
