Header Options ( Down arrow, Inbox, Notifications) | Fix secret every board is secret on Pin.js

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -15,6 +15,9 @@ input {
 }
 
 @import "./Header";
+@import "./HeaderMenu";
+@import "./HeaderInbox";
+@import "./HeaderNotifications";
 @import "./Feed";
 @import "./Pin";
 @import "./Search";
