--- a/src/scss/_FloatingActions.scss
+++ b/src/scss/_FloatingActions.scss
@@ -18,6 +18,7 @@
   margin: 0.5rem;
   border-radius: 50%;
   cursor: pointer;
+  background-color: rgb(255, 255, 255);
 
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
