--- a/src/scss/_UnAuthFeed.scss
+++ b/src/scss/_UnAuthFeed.scss
@@ -59,12 +59,10 @@
   pointer-events: none;
 
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(176, 176, 176, 0) 65%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(176, 176, 176, 0) 65%,
+      rgba(255, 255, 255, 1) 100%);
 }
 
 .ua-feed-container__down {
@@ -88,6 +86,7 @@
 
 .ua-feed-container__pins {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
   position: absolute;
   top: 250px;
@@ -95,7 +94,7 @@
 }
 
 .ua-feed-container__pin {
-  width: 215px;
+  width: 13vw;
   height: 350px;
   margin: 1rem 0.6rem;
 }
@@ -103,7 +102,7 @@
 .ua-feed-container__pin img {
   object-fit: cover;
   border-radius: 25px;
-  height: 100%;
+  height: 25vh;
   width: 100%;
   // transform: translateY(100%);
   // animation: slide-in 0.5s 0s ease-out forwards;
@@ -115,6 +114,7 @@
   0% {
     opacity: 0%;
   }
+
   100% {
     transform: translate(0, 0);
     opacity: 100%;
@@ -122,8 +122,8 @@
 }
 
 @keyframes slide-down {
-  0% {
-  }
+  0% {}
+
   100% {
     transform: translateY(25%);
     opacity: 0%;
@@ -146,8 +146,6 @@
   margin-top: 20rem;
 }
 
-.ua-feed-container__pins__column {
-}
 
 .slide-up {
   opacity: 0;
@@ -158,6 +156,7 @@
 .slide-down {
   animation: slide-down 1s 0s forwards;
 }
+
 //! C'est MOCHE !!!! rend ca dynamique !!!
 
 .delay-1 {
